[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-pi"

dynamic = ["version"]
description = "Extension pi created by CME"
license = "Apache-2.0"
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-pi" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cloudmesh-ai-cmc",
    "click",
    "rich",
    "pytest",
    "cloudmesh-ai-common",
    "PyYAML",
    "cloudmesh-ai-theme",
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
pi = "command.pi:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]
